--- a/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
+++ b/translations/kangyur/translations/072-007_toh307-sutra_on_the_limits_of_lifes_duration.xml
@@ -4,15 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshe’i mtha’</title>
-                <title type="mainTitle" xml:lang="bo">ཚེའི་མཐའ།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Āyuḥparyanta</title>
                 <title type="mainTitle" xml:lang="en">The Limits of Life</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">tshe’i mtha’i mdo</title>
-                <title type="longTitle" xml:lang="bo">ཚེའི་མཐའི་མདོ།</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Āyuḥparyanta</title>
+                <title type="mainTitle" xml:lang="bo">ཚེའི་མཐའ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshe’i mtha’</title>
                 <title type="longTitle" xml:lang="en">The Sūtra on the Limits of Life</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āyuḥparyanta­sūtra</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">ཚེའི་མཐའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">tshe’i mtha’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《壽命終經》（大正藏：《佛說較量壽命經》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-6">Translated by Bruno Galasek with Lama Kunga Thartse Rinpoche<lb/>under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-23">Bruno Galasek-Hul</author>
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2021</date>
+                <edition>v 1.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-22T15:23:44.957Z" user="celso">22/06/2021 15:23:44</note>
+                <note type="lastUpdated" date-time="2022-06-29T16:10:15.892Z" user="admin">29/06/2022 16:10:15</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:19:24.922Z" user="mike">2.d</note>
@@ -88,10 +88,8 @@
                 <note type="updated" update="translation-status" value="2" date-time="2021-04-19T14:28:24.928Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-19T14:28:24.928Z" user="mike">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-20T14:16:53.185Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="translation-status" value="1" date-time="2021-04-23T08:02:19.06Z" user="mike">1</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-04-23T08:02:19.06Z" user="mike">First published
                     version</note>
@@ -103,8 +101,10 @@
                     Wiesiek</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2021-05-06T15:03:10.836Z" user="celso">updated Skt. in n.
                     77</note>
-            
-    <note type="updated" update="text-version" value="1.0.6" date-time="2021-06-08T15:46:31.261Z" user="laura">Added citations for Toh 317</note>
+                <note type="updated" update="text-version" value="1.0.6" date-time="2021-06-08T15:46:31.261Z" user="laura">Added citations for Toh 317</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2021-09-09T18:42:57.904Z" user="celso">activated pending links</note>
+                <note type="updated" update="text-version" value="1.0.8" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.9" date-time="2022-06-29T16:10:08.343Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1379,7 +1379,7 @@
                             Heaven is one thousand years. Premature death does occur.” According to Matsumura (1989, 86, n. on [57]) the Chinese
                             translation confirms the Sanskrit version. </note> is one thousand eons.<note place="end" xml:id="UT22084-072-007-276">
                             According to the Tib. The <foreign xml:lang="Sa-Ltn" type="term">asaṃjñāsatvā</foreign> are not listed in the Arv (Samtani
-                                2002; <ref rend="pending" target="https://read.84000.co/translation/toh317.html">Dharmachakra Translation Committee 2021</ref>. For <foreign xml:lang="Sa-Ltn" type="term">abṛhā devāḥ</foreign>, cf. Samtani: “not great” (for a more detailed description see Samtani 2002, 99:
+                                2002; <ref target="https://read.84000.co/translation/toh317.html">Dharmachakra Translation Committee 2021</ref>). For <foreign xml:lang="Sa-Ltn" type="term">abṛhā devāḥ</foreign>, cf. Samtani: “not great” (for a more detailed description see Samtani 2002, 99:
                             from this stage upward to Akaniṣṭha there are five Pure Abodes). For the term <foreign xml:lang="Sa-Ltn" type="term">asaṃjñāsatvā</foreign>—and the somewhat unsatisfactory translation “Unconscious beings”—see the discussion in the
                                 AKBh<ref rend="pending" target="https://read.84000.co/translation/toh4090.html"/>: Pruden 1988–90, vol. 1,
                             221–23.</note> Premature death does occur. <ref type="sanskrit">{S87}</ref>
@@ -1396,7 +1396,7 @@
                             inverts these two levels of the Pure Abodes: according to Mvy (s.v. sudarśanāḥ), the Tib. word that here seems to render
                             Skt. <foreign xml:lang="Sa-Ltn" type="term">sudṛśa</foreign> (= <foreign xml:lang="Bo-Ltn" type="term">shin tu mthong
                                 ba</foreign> in Āps) usually corresponds to Skt. <foreign xml:lang="Sa-Ltn" type="term">sudarśana</foreign>, while the
-                            Tib. <foreign xml:lang="Bo-Ltn" type="term">gya nom snang gi lha rnams</foreign> usually renders the Skt. <foreign xml:lang="Sa-Ltn" type="term">sudṛśā devāḥ</foreign>. The Arv<ref rend="pending" target="https://read.84000.co/translation/toh317.html"/> gives the order as <foreign xml:lang="Sa-Ltn" type="term">sudṛśa</foreign> &gt; <foreign xml:lang="Sa-Ltn" type="term">sudarśana</foreign> (which corresponds to the Skt. ed.
+                        Tib. <foreign xml:lang="Bo-Ltn" type="term">gya nom snang gi lha rnams</foreign> usually renders the Skt. <foreign xml:lang="Sa-Ltn" type="term">sudṛśā devāḥ</foreign>. The <ref target="https://read.84000.co/translation/toh317.html">Arv</ref> gives the order as <foreign xml:lang="Sa-Ltn" type="term">sudṛśa</foreign> &gt; <foreign xml:lang="Sa-Ltn" type="term">sudarśana</foreign> (which corresponds to the Skt. ed.
                             of the Āps) and the Pāli, too, has first <foreign xml:lang="Pi-Ltn" type="term">sudassā</foreign> and next <foreign xml:lang="Pi-Ltn" type="term">sudassī</foreign> (see Walshe 1995, 39).</note> is four thousand eons. Premature death
                         does occur.</p>
 
@@ -1512,7 +1512,7 @@
                         <abbr>Arv</abbr>
                         <expan>
                             <title xml:lang="Sa-Ltn">Artha­viniścaya­sūtra</title>. See Dharmachakra Translation Committee, trans. <title xml:lang="en">
-                                <ref rend="pending" target="https://read.84000.co/translation/toh317.html">Distinctly Ascertaining the Meanings</ref>
+                                <ref target="https://read.84000.co/translation/toh317.html">Distinctly Ascertaining the Meanings</ref>
                             </title>, Toh 317.</expan>
                     </item>
                     <item xml:id="UT22084-072-007-306">
@@ -1711,7 +1711,7 @@
                     <bibl xml:id="UT22084-072-007-360">Crook, John, and Henry Osmaston. <title xml:lang="en">Himalayan Buddhist Villages: Environment,
                             Resources, Society and Religious Life in Zangskar, Ladakh</title>. Bristol: University of Bristol, 1994.</bibl>
                     <bibl xml:id="UT22084-072-007-512">Dharmachakra Translation Committee, trans. <title xml:lang="en">
-                        <ref rend="pending" target="https://read.84000.co/translation/toh317.html">Distinctly Ascertaining the Meanings</ref>
+                        <ref target="https://read.84000.co/translation/toh317.html">Distinctly Ascertaining the Meanings</ref>
                     </title> (<title xml:lang="Sa-Ltn">Arthaviniścayadharmaparyāya</title>, Toh 317). 84000: Translating the Words of the
                         Buddha, 2021.</bibl>
                     <bibl xml:id="UT22084-072-007-361">Galasek-Hul, Bruno, and Lama Kunga Thartse Rinpoche (2021). <title xml:lang="en">
@@ -2321,14 +2321,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-072-007-413">
-                            <term>the attainment of the meditative state without consciousness</term>
-                            <term xml:lang="Bo-Ltn">’du shes med pa’i snyoms par ’jug pa </term>
+                        <gloss xml:id="UT22084-072-007-413" type="term" mode="match">
+                            <term>attainment of the meditative state without consciousness</term>
+                            <term xml:lang="Bo-Ltn">’du shes med pa’i snyoms par ’jug pa</term>
                             <term xml:lang="bo">འདུ་ཤེས་མེད་པའི་སྙོམས་པར་འཇུག་པ།</term>
                             <term xml:lang="Sa-Ltn">asaṃjñā­samāpatti</term>
                             <term xml:lang="Sa-Ltn">asaṃjñi­samāpatti</term>
-                            <term type="definition">An ordinary or worldly form of the fourth meditative absorption. It is variously interpreted as a
-                                positive attainment or a counterfeit state of liberation (see Buswell and Lopez 2014, 67). </term>
+                            <term type="definition">An ordinary or worldly form of the fourth meditative absorption. It is variously interpreted as a positive attainment or a counterfeit state of liberation (see Buswell and Lopez 2014, 67). </term>
                         </gloss>
                     </item>
                     <item>
@@ -2588,13 +2587,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-072-007-441">
+                        <gloss xml:id="UT22084-072-007-441" type="place" mode="match">
                             <term>Heaven of Brahmā’s Ministers</term>
-                            <term xml:lang="Bo-Ltn">’phrul dga’ </term>
-                            <term xml:lang="bo">འཕྲུལ་དགའ།</term>
                             <term xml:lang="Sa-Ltn">Brahmapurohita</term>
-                            <term type="definition">The second of the heavens of the form realm and of the three Brahmā heavens. Rebirth there is the
-                                karmic result of accomplishing the first meditative absorption. </term>
+                            <term xml:lang="Bo-Ltn">tshangs pa’i mdun na ’don</term>
+                            <term xml:lang="bo">ཚངས་པའི་མདུན་ན་འདོན།</term>
+                            <term type="definition">The second of the heavens of the form realm and of the three Brahmā heavens. Rebirth there is the karmic result of accomplishing the first meditative absorption. </term>
                         </gloss>
                     </item>
                     <item>
