--- a/translations/kangyur/translations/068-012_toh278-the_eight_auspicious_ones.xml
+++ b/translations/kangyur/translations/068-012_toh278-the_eight_auspicious_ones.xml
@@ -4,18 +4,15 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="en">The Eight Auspicious
-                                        Ones</title>
+                                <title type="mainTitle" xml:lang="en">The Eight Auspicious Ones</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Maṅgalāṣṭaka</title>
                                 <title type="mainTitle" xml:lang="bo">བཀྲ་ཤིས་བརྒྱད་པ།</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">bkra shis brgyad
-                                        pa</title>
-                                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The
-                                        Eight Auspicious Ones”</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">bkra shis brgyad pa</title>
+                                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Eight Auspicious Ones”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­maṅgalāṣṭaka­nāma­mahāyāna­sūtra</title>
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་བཀྲ་ཤིས་བརྒྱད་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa bkra shis brgyad
-                                        pa zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa bkra shis brgyad pa zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="otherTitle" xml:lang="zh">《八吉祥經》 （大正藏：《佛說八部佛名經》）</title>
                                 <author role="translatorMain" ref="eft:team-61">Translated by
                                         Bhikṣuṇī Thubten Damcho and team under the patronage and
                                         supervision of 84000: Translating the Words of the
@@ -31,7 +28,7 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -77,7 +74,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-04-27T19:54:44.914Z" user="admin">27/04/2022 19:54:44</note>
+                                <note type="lastUpdated" date-time="2022-06-29T16:13:56.605Z" user="admin">29/06/2022 16:13:56</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:50:29.641Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:50:29.641Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-02T14:34:15.282Z" user="line-tofte">3</note>
@@ -101,36 +98,24 @@
                                 <note type="updated" update="text-version" value="0.0.9" date-time="2021-10-15T08:42:43.42Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="translation-status" value="2.e" date-time="2021-11-26T14:54:14.629Z" user="line-tofte">2.e</note>
-
                                 <note type="updated" update="text-version" value="0.0.10" date-time="2021-11-26T14:54:14.629Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="text-version" value="0.0.11" date-time="2021-11-26T14:54:45.899Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="translation-status" value="2.d" date-time="2021-12-21T15:06:04.09Z" user="line-tofte">2.d</note>
-
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2021-12-21T15:06:04.09Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="translation-status" value="2.c" date-time="2022-01-11T10:46:15.067Z" user="line-tofte">2.c</note>
-
                                 <note type="updated" update="text-version" value="0.0.13" date-time="2022-01-11T10:46:15.067Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="text-version" value="0.0.14" date-time="2022-02-03T12:54:00.355Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="text-version" value="0.0.15" date-time="2022-02-03T12:54:26.225Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="translation-status" value="2.b" date-time="2022-02-03T12:55:40.712Z" user="line-tofte">2.b</note>
-
                                 <note type="updated" update="text-version" value="0.0.16" date-time="2022-02-03T12:55:40.712Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="translation-status" value="2.a" date-time="2022-02-03T12:56:31.962Z" user="line-tofte">2.a</note>
-
                                 <note type="updated" update="text-version" value="0.0.17" date-time="2022-02-03T12:56:31.962Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="translation-status" value="2" date-time="2022-02-11T10:16:24.732Z" user="line-tofte">2</note>
@@ -138,10 +123,11 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-13T10:21:07.15Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-21T08:33:24.776Z" user="line-tofte">Auto (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="1.a" date-time="2022-04-22T06:59:03.768Z" user="sameer">1.a</note>
-                            <note type="updated" update="text-version" value="1.0.0" date-time="2022-04-22T06:59:03.768Z" user="sameer">First published version</note>
-                            <note type="updated" update="text-version" value="1.0.1" date-time="2022-04-27T19:54:41.156Z" user="martina-cotter">A part of one sentence was missing and needed updating.</note>
+                                <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-21T08:33:24.776Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="translation-status" value="1.a" date-time="2022-04-22T06:59:03.768Z" user="sameer">1.a</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2022-04-22T06:59:03.768Z" user="sameer">First published version</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2022-04-27T19:54:41.156Z" user="martina-cotter">A part of one sentence was missing and needed updating.</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-29T16:13:49.089Z" user="cabie-sim">Auto (update-titles)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
