--- a/translations/kangyur/translations/068-002_toh268-the_sutra_of_king_of_the_inconceivable.xml
+++ b/translations/kangyur/translations/068-002_toh268-the_sutra_of_king_of_the_inconceivable.xml
@@ -5,25 +5,23 @@
                 <fileDesc>
                         <titleStmt>
 
-                                <title type="mainTitle" xml:lang="en">The Sūtra of King of the
-                                        Inconceivable</title>
+                                <title type="mainTitle" xml:lang="en">The Sūtra of King of the Inconceivable</title>
 
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Acintya­rāja­sūtra</title>
 
-                                <title type="mainTitle" xml:lang="bo">བསམ་གྱིས་མི་ཁྱབ་པའི་རྒྱལ་པོའི་མདོ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">bsam gyis mi khyab pa'i rgyal po'i mdo/</title>
 
-                                <title type="mainTitle" xml:lang="Bo-Ltn">bsam gyis mi khyab pa'i
-                                        rgyal po'i mdo/</title>
+                                <title type="mainTitle" xml:lang="bo">བསམ་གྱིས་མི་ཁྱབ་པའི་རྒྱལ་པོའི་མདོ།</title>
 
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra "The Sūtra of King of the Inconceivable"</title>
 
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་བསམ་གྱིས་མི་ཁྱབ་པའི་རྒྱལ་པོའི་མདོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
 
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa bsam gyis mi
-                                        khyab pa’i rgyal po’i mdo zhes bya ba theg pa chen po’i
-                                        mdo</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa bsam gyis mi khyab pa’i rgyal po’i mdo zhes bya ba theg pa chen po’i mdo</title>
 
                                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryācintya­rāja­sūtra­nāma­mahāyāna­sūtra</title>
+
+                                <title type="otherTitle" xml:lang="zh">《不可思議王經》</title>
 
                                 <author role="translatorMain" ref="eft:team-49">Translated by the
                                         Subhashita Translation Group<lb/>under the patronage and
@@ -49,7 +47,7 @@
 
 
                         <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -92,24 +90,39 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-05-12T13:00:34.411Z" user="admin">12/05/2022 13:00:34</note>
+
+                                
+
+                                
+
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:14:44.365Z" user="line-tofte">3</note>
+
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-11-12T11:14:44.365Z" user="line-tofte">0.0.1</note>
+
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T11:15:10.892Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-12-15T10:19:31.456Z" user="line-tofte">2.h</note>
+
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2020-12-15T10:19:31.456Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
                                 <note type="updated" update="text-version" value="0.0.4" date-time="2020-12-15T10:19:56.094Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
                                 <note type="updated" update="translation-status" value="2.g" date-time="2021-04-29T10:48:43.095Z" user="line-tofte">2.g</note>
+
                                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-04-29T10:48:43.095Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
                                 <note type="updated" update="translation-status" value="2.f" date-time="2021-09-28T08:51:36.797Z" user="line-tofte">2.f</note>
+
                                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-28T08:51:36.797Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
                                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T08:51:59.066Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
                                 <note type="updated" update="translation-status" value="2.d" date-time="2021-12-07T10:35:45.442Z" user="line-tofte">2.d</note>
 
                                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-07T10:35:45.442Z" user="line-tofte">Auto
@@ -135,18 +148,29 @@
 
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-28T13:34:42.483Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T09:56:00.342Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-13T07:15:11.626Z" user="line-tofte">Auto (update-contributors)</note>
-                            <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-13T07:15:26.76Z" user="line-tofte">Auto (update-contributors)</note>
-                            <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-21T08:32:22.235Z" user="line-tofte">Auto (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="1.a" date-time="2022-04-29T07:20:17.435Z" user="sameer">1.a</note>
-                            <note type="updated" update="text-version" value="1.0.0" date-time="2022-04-29T07:20:17.435Z" user="sameer">First published version</note>
-                            <note type="updated" update="text-version" value="1.0.1" date-time="2022-04-29T07:25:11.541Z" user="sameer">1.0.1</note>
-                            <note type="updated" update="text-version" value="1.0.2" date-time="2022-04-29T07:31:51.166Z" user="sameer">1.0.2</note>
-                            <note type="updated" update="text-version" value="1.0.3" date-time="2022-05-11T20:09:16.672Z" user="martina-cotter">Added pending links.</note>
-                            <note type="updated" update="text-version" value="1.0.4" date-time="2022-05-12T13:00:30.694Z" user="martina-cotter">Added pending links.</note>
-                        </notesStmt>
+
+                                <note type="updated" update="text-version" value="0.0.4" date-time="2022-04-13T07:15:11.626Z" user="line-tofte">Auto (update-contributors)</note>
+
+                                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-13T07:15:26.76Z" user="line-tofte">Auto (update-contributors)</note>
+
+                                <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-21T08:32:22.235Z" user="line-tofte">Auto (update-contributors)</note>
+
+                                <note type="updated" update="translation-status" value="1.a" date-time="2022-04-29T07:20:17.435Z" user="sameer">1.a</note>
+
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2022-04-29T07:20:17.435Z" user="sameer">First published version</note>
+
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2022-04-29T07:25:11.541Z" user="sameer">1.0.1</note>
+
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2022-04-29T07:31:51.166Z" user="sameer">1.0.2</note>
+
+                                <note type="updated" update="text-version" value="1.0.3" date-time="2022-05-11T20:09:16.672Z" user="martina-cotter">Added pending links.</note>
+
+                                <note type="updated" update="text-version" value="1.0.4" date-time="2022-05-12T13:00:30.694Z" user="martina-cotter">Added pending links.</note>
+                        <note type="lastUpdated" date-time="2022-06-29T16:15:07.967Z" user="admin">29/06/2022 16:15:07</note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-29T16:15:00.434Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
                 </fileDesc>
         </teiHeader>
 
