--- a/translations/kangyur/translations/067-005_toh266-bouquet_of_flowers.xml
+++ b/translations/kangyur/translations/067-005_toh266-bouquet_of_flowers.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="../../../schema/current/translation.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<tei:TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
+<TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">Bouquet of Flowers</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Kusumasañcaya</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">me tog gi tshogs</title>
                 <title type="mainTitle" xml:lang="bo">མེ་ཏོག་གི་ཚོགས།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Kusumasañcaya</title>
-                <title type="mainTitle" xml:lang="en">Bouquet of Flowers</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa me tog gi tshogs zhes bya ba
-                    theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Bouquet of
-                    Flowers”</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Bouquet of Flowers”</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་མེ་ཏོག་གི་ཚོགས་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Ārya­kusuma­sañcaya­nāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa me tog gi tshogs zhes bya ba theg pa chen po’i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Kusumasaṃcaya</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Ārya­kusuma­sañcaya­nāma­mahāyāna­sūtra</title>
+                <title type="otherTitle" xml:lang="zh">《華聚經》（大正藏：《佛說稱揚諸佛功德經》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the
                     Dharmachakra Translation Committee<lb/> under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
@@ -38,7 +37,7 @@
                     Higgins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.15 <date>2021</date>
+                <edition>v 1.0.17 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -74,8 +73,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-27T19:23:27.65Z" user="admin">27/08/2021 19:23:27</note>
-
+                <note type="lastUpdated" date-time="2022-06-29T16:16:16.55Z" user="admin">29/06/2022 16:16:16</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-24T14:56:55.963Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-11-20T13:14:37.063Z" user="john">2.c</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
@@ -100,11 +98,9 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-03-29T09:36:18.361Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.1.9" date-time="2021-03-29T09:36:18.361Z" user="mike">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.1.10" date-time="2021-04-19T12:32:42.958Z" user="andre">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.1.11" date-time="2021-04-19T12:33:17.419Z" user="andre">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.1.12" date-time="2021-04-19T12:34:18.536Z" user="andre">Auto (update-titles)</note>
-
                 <note type="updated" update="translation-status" value="2" date-time="2021-05-26T09:01:05.721Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="0.1.13" date-time="2021-05-26T09:01:05.721Z" user="mike">Auto
                     (update-publication-status)</note>
@@ -112,17 +108,16 @@
                     (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.15" date-time="2021-07-14T09:33:56.38Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="text-version" value="0.1.16" date-time="2021-07-26T17:55:36.6Z" user="laura">Updated dialogue style, various
                     other edits</note>
-
                 <note type="updated" update="translation-status" value="1" date-time="2021-08-06T14:49:03.607Z" user="john">1</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-08-06T14:49:03.607Z" user="john">After some final improvements
                     and corrections, first published version.</note>
                 <note type="updated" update="text-version" value="1.0.13" date-time="2021-08-06T15:18:18.49Z" user="john">Minor change to summary.</note>
-            
-    <note type="updated" update="text-version" value="1.0.14" date-time="2021-08-23T05:59:44.818Z" user="mike">two typos corrected from reader</note>
-    <note type="updated" update="text-version" value="1.0.15" date-time="2021-08-27T19:23:24.154Z" user="celso">Skt. glossary corrections from Wiesied applied</note>
+                <note type="updated" update="text-version" value="1.0.14" date-time="2021-08-23T05:59:44.818Z" user="mike">two typos corrected from reader</note>
+                <note type="updated" update="text-version" value="1.0.15" date-time="2021-08-27T19:23:24.154Z" user="celso">Skt. glossary corrections from Wiesied applied</note>
+                <note type="updated" update="text-version" value="1.0.16" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.17" date-time="2022-06-29T16:16:08.952Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -3269,8 +3264,7 @@
                             <term xml:lang="Sa-Ltn">bhagavat</term>
                             <term type="definition">In Buddhist literature, an epithet applied to
                                 buddhas, most often to Śākyamuni. The Sanskrit term generically
-                                means “possessing fortune,” but in specifically Buddhist contexts
-                                implies that a buddha is in possession of six auspicious qualities
+                                means “possessing fortune,” but in specifically Buddhist contexts this term implies that a buddha is in possession of six auspicious qualities
                                     (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>)
                                 associated with complete awakening. The Tibetan term—where <foreign xml:lang="Sa-Ltn" type="term">bcom</foreign> is said to refer to
                                 “subduing” the four māras, <foreign xml:lang="Sa-Ltn" type="term">ldan</foreign> to “possessing” the great qualities of
@@ -5212,14 +5206,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-067-005-632">
+                        <gloss xml:id="UT22084-067-005-632" type="place" mode="match">
                             <term>Crushing Hell</term>
-                            <term xml:lang="Bo-Ltn">sdus gzhom </term>
-                            <term xml:lang="bo">སྡུས་གཞོམ།</term>
+                            <term xml:lang="Bo-Ltn">bsdus gzhom</term>
+                            <term xml:lang="bo">བསྡུས་གཞོམ།</term>
                             <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">Third of the eight hot hells of Buddhist
-                                cosmology. The guardians of the Crushing Hell repeatedly crush its
-                                inhabitants between mountains.</term>
+                            <term type="definition">Third of the eight hot hells of Buddhist cosmology. The guardians of the Crushing Hell repeatedly crush its inhabitants between mountains.</term>
                         </gloss>
                     </item>
                     <item>
@@ -6466,4 +6458,4 @@
             </div>
         </back>
     </text>
-</tei:TEI>
+</TEI>
