--- a/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
+++ b/translations/kangyur/translations/031-002_toh11_perfection_of_wisdom_in_ten_thousand_lines.xml
@@ -4,18 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">The Transcendent Perfection of Wisdom in Ten Thousand Lines</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Daśa­sāhasrikā­prajñā­pāramitā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">shes phyin khri pa</title>
                 <title type="mainTitle" xml:lang="bo">ཤེས་ཕྱིན་ཁྲི་པ།</title>
-                <title type="mainTitle" xml:lang="en">The Transcendent Perfection of Wisdom in Ten
-                    Thousand Lines</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Daśa­sāhasrikā­prajñā­pāramitā</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་ཁྲི་པ་ཤེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
-                    khri pa zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Transcendent
-                    Perfection of Wisdom in Ten Thousand Lines”</title>
+                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Transcendent Perfection of Wisdom in Ten Thousand Lines”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­daśa­sāhasrikā­prajñā­pāramitā­nāma­mahā­yāna­sūtra</title>
-                <title type="otherTitle" xml:lang="zh">般若波羅密多萬頌</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་ཁྲི་པ་ཤེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa khri pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《般若波羅密多萬頌》</title>
                 <author role="translatorMain" ref="contributors.xml#team-21"> Translated by the
                     Padmakara Translation Group<lb/> under the patronage and supervision of 84000:
                     Translating the Words of the Buddha</author>
@@ -44,7 +41,7 @@
                 <sponsor ref="sponsors.xml#sponsor-25">Matthew, Vivian, Ye Kong and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.40.10 <date>2022</date>
+                <edition>v 1.40.11 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -82,7 +79,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T11:13:38.846Z" user="admin">10/06/2022 11:13:38</note>
+                <note type="lastUpdated" date-time="2022-06-30T08:53:03.507Z" user="admin">30/06/2022 08:53:03</note>
                 <note type="updated" update="text-version" value="v 1.32" date-time="2019-06-18T03:21:25.442Z" user="celso">v 1.32 2019</note>
                 <note type="updated" update="text-version" value="v 1.33" date-time="2019-06-18T15:44:43.637Z" user="celso">v 1.33 2019</note>
                 <note type="updated" update="text-version" value="v 1.34" date-time="2019-06-21T14:15:47.78Z" user="celso">v 1.34 2019</note>
@@ -117,7 +114,6 @@
                 <note type="updated" update="text-version" value="1.38.2" date-time="2020-09-18T16:13:09.197Z" user="konchog">Fixed one typo and one
                     grammar issue at 3.2.</note>
                 <note type="updated" update="text-version" value="1.38.3" date-time="2020-11-07T01:16:16.227Z" user="laura">Corrected typo</note>
-
                 <note type="updated" update="text-version" value="1.38.4" date-time="2020-11-23T14:16:59.523Z" user="admin">Auto (TEI migration
                     2.0.0)</note>
                 <note type="updated" update="text-version" value="1.38.5" date-time="2020-11-23T19:59:58.858Z" user="celso">Updated pending links</note>
@@ -126,7 +122,6 @@
                 <note type="updated" update="text-version" value="1.38.7" date-time="2020-12-03T09:57:02.441Z" user="mike">update for new pub</note>
                 <note type="updated" update="text-version" value="1.38.8" date-time="2020-12-07T20:26:31.013Z" user="celso">Located and put in milestone
                     ids for two pending links to Toh 147</note>
-
                 <note type="updated" update="text-version" value="1.38.9" date-time="2020-12-09T18:54:39.005Z" user="laura">En dashes in abbreviations and
                     KDP citations; reworked wylie for "consider" to remove dash.</note>
                 <note type="updated" update="text-version" value="1.38.10" date-time="2020-12-10T17:27:53.939Z" user="celso">removed glossary entry for
@@ -137,7 +132,6 @@
                     Bandé</note>
                 <note type="updated" update="text-version" value="1.38.13" date-time="2021-02-08T19:14:31.92Z" user="celso">Updated links, toh 147 active,
                     (set toh 62 to pending)</note>
-
                 <note type="updated" update="text-version" value="1.38.14" date-time="2021-04-15T08:38:23.759Z" user="line-tofte">Auto
                     (update-contributors)</note>
                 <note type="updated" update="text-version" value="1.38.15" date-time="2021-04-24T10:46:49.782Z" user="andre">minor fix in Skt of glossary
@@ -154,13 +148,10 @@
                     updated</note>
                 <note type="updated" update="text-version" value="1.40.1" date-time="2021-12-28T19:53:02.525Z" user="john">First sets made of many changes
                     to be made in parallel with editing of Toh 9.</note>
-
                 <note type="updated" update="text-version" value="1.40.2" date-time="2022-01-02T19:00:13.322Z" user="john">Further edits in parallel with
                     Toh 9.</note>
-
                 <note type="updated" update="text-version" value="1.40.3" date-time="2022-01-04T21:40:34.472Z" user="celso">karma to karman in Skt. field
                     glossary</note>
-
                 <note type="updated" update="text-version" value="1.40.4" date-time="2022-01-24T16:57:23.535Z" user="konchog">Couple typos fixed on title
                     page.</note>
                 <note type="updated" update="text-version" value="1.40.5" date-time="2022-03-08T15:16:10.583Z" user="celso">Fixed some glossary
@@ -171,6 +162,7 @@
                 <note type="updated" update="text-version" value="1.40.8" date-time="2022-06-09T21:10:03.289Z" user="celso">Slight adjustment to newly added links, also unlinked some terms in intro</note>
                 <note type="updated" update="text-version" value="1.40.9" date-time="2022-06-09T21:23:59.735Z" user="celso">fixed a bibl entry</note>
                 <note type="updated" update="text-version" value="1.40.10" date-time="2022-06-10T11:13:34.498Z" user="celso">minor correction to bibl entry</note>
+                <note type="updated" update="text-version" value="1.40.11" date-time="2022-06-30T08:53:01.2Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
