--- a/translations/kangyur/placeholders/044-012_toh91-the_sutra_of_ratnacudas_questions.xml
+++ b/translations/kangyur/placeholders/044-012_toh91-the_sutra_of_ratnacudas_questions.xml
@@ -4,11 +4,11 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gtsug na rin po ches zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ratnacūḍaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Ratnacūḍa's Questions</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gtsug na rin po ches zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">ratnacūḍaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gtsug na rin po ches zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaratnacūḍa­paripṛcchā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gtsug na rin po ches zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《寶髻所問經》(大正藏：大寶積經寶髻菩薩會)</title>
                 <author role="translatorMain" ref="contributors.xml#team-57"/>
                 <consultant role="dharmaMaster" ref="contributors.xml#person-352">Ringu Tulku Rinpoche</consultant>
@@ -22,7 +22,7 @@
                 <sponsor ref="sponsors.xml#sponsor-199">Dakki</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,15 +41,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-17T02:22:23.618Z" user="amy">17/03/2021 02:22:23</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:36:51.366Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:36:51.366Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:06:24.871Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T10:06:24.871Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T11:57:07.236Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T11:58:43.668Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-02-07T15:55:07.189Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-03-17T02:22:20.7Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-30T08:54:23.663Z" user="admin">30/06/2022 08:54:23</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:36:51.366Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:36:51.366Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:06:24.871Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T10:06:24.871Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T11:57:07.236Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T11:58:43.668Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-02-07T15:55:07.189Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-03-17T02:22:20.7Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-06-30T08:54:15.796Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
