--- a/translations/kangyur/translations/048-001_toh101-upholding_the_roots_of_virtue.xml
+++ b/translations/kangyur/translations/048-001_toh101-upholding_the_roots_of_virtue.xml
@@ -4,39 +4,35 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">Upholding the Roots of Virtue</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Kuśala­mūla­saṃparigraha</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dge ba’i rtsa ba yongs su ’dzin pa</title>
                 <title type="mainTitle" xml:lang="bo">དགེ་བའི་རྩ་བ་ཡོངས་སུ་འཛིན་པ།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Kuśala­mūla­saṃparigraha</title>
-                <title type="mainTitle" xml:lang="en">Upholding the Roots of Virtue</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dge ba’i rtsa ba yongs su ’dzin
-                    pa zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་དགེ་བའི་རྩ་བ་ཡོངས་སུ་འཛིན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Upholding the Roots of Virtue”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­kuśala­mūla­samparigraha­nāma­mahāyāna­sūtra</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “Upholding the
-                    Roots of Virtue”</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dge ba’i rtsa ba yongs su ’dzin
-                    pa/</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dge ba’i rtsa ba yongs su ’dzin pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་དགེ་བའི་རྩ་བ་ཡོངས་སུ་འཛིན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Kuśala­mūla­samparigraha­sūtra</title>
-                <title type="otherTitle" xml:lang="zh">總持善根經 (佛說華手經)</title>
+                <title type="otherTitle" xml:lang="zh">《總持善根經》 (佛說華手經)</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dge ba’i rtsa ba yongs su ’dzin pa/</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the
                     Dharmachakra Translation Committee<lb/> under the patronage and supervision of
                     84000: Translating the Words of the Buddha </author>
-                <sponsor ref="sponsors.xml#sponsor-50">Huang Yi-Shong, Huang Tsai Shun-Ching, All
-                    Sentient Beings</sponsor>
                 <editor role="externalReviewer" ref="contributors.xml#person-256">Douglas Duckworth</editor>
                 <editor role="copyEditor" ref="contributors.xml#person-249">Konchog Norbu</editor>
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-108">André Rodrigues</editor>
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-92">Laura Goetz</editor>
                 <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
-    <editor role="finalReviewer" ref="contributors.xml#person-289">Nathaniel Rich</editor>
-    <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>        
+                <editor role="finalReviewer" ref="contributors.xml#person-289">Nathaniel Rich</editor>
+                <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
                 <author role="translatorEng" ref="contributors.xml#person-54">Dr. Thomas Doctor</author>
                 <author role="translatorEng" ref="contributors.xml#person-51">James Gentry</author>
-
-    <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
+                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
+                <sponsor ref="sponsors.xml#sponsor-50">Huang Yi-Shong, Huang Tsai Shun-Ching, All
+                    Sentient Beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.16 <date>2022</date>
+                <edition>v 1.2.18 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -73,37 +69,37 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-08T21:09:39.886Z" user="admin">08/03/2022 21:09:39</note>
-
+                <note type="lastUpdated" date-time="2022-06-30T08:57:41.094Z" user="admin">30/06/2022 08:57:41</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:11:49.156Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2020-02-21T19:14:43.414Z" user="laura">v 0.0.1</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2020-02-21T19:14:43.414Z" user="laura">2.a</note>
-
                 <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-03-28T11:07:01.006Z" user="andre">Finished Mark-up and Glossary
                     Troubleshooting</note>
-            
-    <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-04-16T06:40:28.88Z" user="line-tofte">v 0.0.2</note>
-    <note type="updated" update="text-version" value="v 0.0.3" date-time="2020-04-29T06:35:38.451Z" user="mike">v 0.0.3</note>
-    <note type="updated" update="translation-status" value="2" date-time="2020-04-29T06:35:38.451Z" user="mike">2</note>
-    <note type="updated" update="text-version" value="v 1.1.1" date-time="2020-05-23T10:21:24.569Z" user="john">First published version.</note>
-    <note type="updated" update="translation-status" value="1" date-time="2020-05-23T10:21:24.569Z" user="john">First published version.</note>
-    <note type="updated" update="text-version" value="v 1.2.1" date-time="2020-05-25T12:49:43.052Z" user="john">Version with all chapters fully reviewed.</note>
-    <note type="updated" update="text-version" value="v 1.2.2" date-time="2020-05-25T19:29:20.946Z" user="john">One small correction made</note>
-    <note type="updated" update="text-version" value="v 1.2.3" date-time="2020-06-01T14:39:59.344Z" user="john">A few minor corrections.</note>
-    <note type="updated" update="text-version" value="1.2.4" date-time="2020-09-01T11:26:31.516Z" user="laura">edited acknowledgement</note>
-    <note type="updated" update="text-version" value="1.2.5" date-time="2020-09-18T10:10:44.596Z" user="john">dagger corrected to spike</note>
-    <note type="updated" update="text-version" value="1.2.6" date-time="2020-09-30T10:10:29.635Z" user="mike">glossary typo fixed</note>
-    <note type="updated" update="text-version" value="1.2.7" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.2.8" date-time="2020-11-23T22:07:34.331Z" user="celso">Updated pending links</note>
-    <note type="updated" update="text-version" value="1.2.9" date-time="2020-12-02T20:31:06.432Z" user="laura">Removed one bad space.</note>
-    <note type="updated" update="text-version" value="1.2.10" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.2.11" date-time="2021-01-04T21:39:39.163Z" user="laura">Updated colophon to Bandé</note>
-    <note type="updated" update="text-version" value="1.2.12" date-time="2021-01-26T21:03:42.218Z" user="celso">correct IAST Skt. Kṣemangkara to Kṣemaṅkara</note>
-    <note type="updated" update="text-version" value="1.2.13" date-time="2021-02-02T01:52:07.455Z" user="celso">updated quote style in PDFs</note>
-    <note type="updated" update="text-version" value="1.2.14" date-time="2021-04-22T13:24:40.682Z" user="celso">added @xml:lang to Chinese strings, added nonbreak spaces to ellipses</note>
-    <note type="updated" update="text-version" value="1.2.15" date-time="2021-07-29T20:03:41.25Z" user="celso">kiṃnara to kinnara, fixed a few glossary spellings</note>    <note type="updated" update="text-version" value="1.2.16" date-time="2022-03-08T21:09:35.589Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
+                <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-04-16T06:40:28.88Z" user="line-tofte">v 0.0.2</note>
+                <note type="updated" update="text-version" value="v 0.0.3" date-time="2020-04-29T06:35:38.451Z" user="mike">v 0.0.3</note>
+                <note type="updated" update="translation-status" value="2" date-time="2020-04-29T06:35:38.451Z" user="mike">2</note>
+                <note type="updated" update="text-version" value="v 1.1.1" date-time="2020-05-23T10:21:24.569Z" user="john">First published version.</note>
+                <note type="updated" update="translation-status" value="1" date-time="2020-05-23T10:21:24.569Z" user="john">First published version.</note>
+                <note type="updated" update="text-version" value="v 1.2.1" date-time="2020-05-25T12:49:43.052Z" user="john">Version with all chapters fully reviewed.</note>
+                <note type="updated" update="text-version" value="v 1.2.2" date-time="2020-05-25T19:29:20.946Z" user="john">One small correction made</note>
+                <note type="updated" update="text-version" value="v 1.2.3" date-time="2020-06-01T14:39:59.344Z" user="john">A few minor corrections.</note>
+                <note type="updated" update="text-version" value="1.2.4" date-time="2020-09-01T11:26:31.516Z" user="laura">edited acknowledgement</note>
+                <note type="updated" update="text-version" value="1.2.5" date-time="2020-09-18T10:10:44.596Z" user="john">dagger corrected to spike</note>
+                <note type="updated" update="text-version" value="1.2.6" date-time="2020-09-30T10:10:29.635Z" user="mike">glossary typo fixed</note>
+                <note type="updated" update="text-version" value="1.2.7" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
+                <note type="updated" update="text-version" value="1.2.8" date-time="2020-11-23T22:07:34.331Z" user="celso">Updated pending links</note>
+                <note type="updated" update="text-version" value="1.2.9" date-time="2020-12-02T20:31:06.432Z" user="laura">Removed one bad space.</note>
+                <note type="updated" update="text-version" value="1.2.10" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+                <note type="updated" update="text-version" value="1.2.11" date-time="2021-01-04T21:39:39.163Z" user="laura">Updated colophon to Bandé</note>
+                <note type="updated" update="text-version" value="1.2.12" date-time="2021-01-26T21:03:42.218Z" user="celso">correct IAST Skt. Kṣemangkara to Kṣemaṅkara</note>
+                <note type="updated" update="text-version" value="1.2.13" date-time="2021-02-02T01:52:07.455Z" user="celso">updated quote style in PDFs</note>
+                <note type="updated" update="text-version" value="1.2.14" date-time="2021-04-22T13:24:40.682Z" user="celso">added @xml:lang to Chinese strings, added nonbreak spaces to ellipses</note>
+                <note type="updated" update="text-version" value="1.2.15" date-time="2021-07-29T20:03:41.25Z" user="celso">kiṃnara to kinnara, fixed a few glossary spellings</note>
+                <note type="updated" update="text-version" value="1.2.16" date-time="2022-03-08T21:09:35.589Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
+                <note type="updated" update="text-version" value="1.2.17" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.2.18" date-time="2022-06-30T08:57:32.626Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -30248,10 +30244,10 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-048-001-3819" mode="marked">
+                        <gloss xml:id="UT22084-048-001-3819" type="place" mode="marked">
                             <term>Source</term>
-                            <term xml:lang="Bo-Ltn">byung ba </term>
-                            <term xml:lang="bo">བྱུང་བ།</term>
+                            <term xml:lang="Bo-Ltn">’byung ba</term>
+                            <term xml:lang="bo">འབྱུང་བ།</term>
                             <term xml:lang="Sa-Ltn"/>
                             <term type="definition">A buddha realm.</term>
                         </gloss>
